dieu chinh layout

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/ico" href="favicon.ico">
     <style>
       body {
-        background-color: #f3f3f3;
+        background-color: #eeeeee;
       }
     </style>
   </head>
